...
    }
    return _mergedImgView;
}
- (UIButton *)backBtn {
    if (!_backBtn) {
        _backBtn = [[UIButton alloc] initWithFrame:CGRectMake(0, 100, 100, 50)];
        [_backBtn setTitle:@"Back" forState:UIControlStateNormal];
        [_backBtn setBackgroundColor:[UIColor blueColor]];
        [_backBtn addTarget:self action:@selector(backBtnClicked) forControlEvents:UIControlEventTouchUpInside];
    }
    return _backBtn;
}
@end
...
