...
    return _maskView;
}

- (UIButton *)bottomBtn {
    if (!_bottomBtn) {
        _bottomBtn = [[UIButton alloc] initWithFrame:kBottomBtnRect];
        [_bottomBtn setTitle:@"Close Guide" forState:UIControlStateNormal];
        [_bottomBtn setTintColor:[UIColor whiteColor]];
        [_bottomBtn.titleLabel setFont:kBottomBtnFont];
        _bottomBtn.backgroundColor = UIColor.clearColor;
        _bottomBtn.layer.borderColor = [UIColor whiteColor].CGColor;
        _bottomBtn.layer.borderWidth = 1;
        _bottomBtn.layer.cornerRadius = 20;
...
